# flatcc-experiments

./: README.md
issues/enums/: CMakeLists.txt  README.md  main.c
issues/fallthrough/: CMakeLists.txt  README.md  example.fbs  main.cc
